--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "dependencies": {
     "@rails/webpacker": "^3.2.2",
     "bootstrap": "^4.0.0",
+    "caniuse-lite": "^1.0.30000808",
     "jquery": "^3.3.1",
-    "popper": "^1.0.1"
+    "popper.js": "^1.12.9",
+    "webpack": "^3.11.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.1"
